--- a/app/globals.css
+++ b/app/globals.css
@@ -14,8 +14,9 @@
   }
 }
 
+/* globals.css */
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    color: black;
 }
+
